--- a/HTML/litag2.html
+++ b/HTML/litag2.html
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-    <div class="title">For Feginner</div>
+    <div class="title">For Beginner</div>
     <ul>
 <h1><li>다양한 목록 출력하기</li></h1>
 <ol>
