--- a/HTML/litag2.html
+++ b/HTML/litag2.html
@@ -28,8 +28,10 @@
 <h1><li>다양한 목록 출력하기</li></h1>
 <ol>
   <h2><li>&#60;ol&#62;tag 다양한 목록 출력하기</li></h2>
+  <p>﻿워드나 구글 문서처럼 자동숫자 메기기가 되는 &#60;ol&#62;태그의 다양한 type</p>
     <ul>
       <h3><li>&#60;ol type="1"&#62;</li></h3>
+      <p>﻿&#60;ol type="1"&#62;은 &#60;ol&#62;태그만 쓴 것과 별다른 차이 없이 출력됩니다. 하지만 문서를 작성하고, 꾸밀 때 문서의 대부분이 a, b, c, d 배열을 하고 있는데 이 목차만 1,2,3,4 순서로 배열을 하고 싶을 경우를 위해 사용되는 속성입니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol type="1"&#62;<br>
@@ -50,6 +52,7 @@
       </fieldset>
 
       <h3><li>&#60;ol type="A"&#62;</li></h3>
+      <p>﻿type="A"는 대문자 A, B, C, D 순서로 자동 메김이 설정됩니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol type="A"&#62;<br>
@@ -70,6 +73,7 @@
       </fieldset>
 
       <h3><li>&#60;ol type="a"&#62;</li></h3>
+      <p>﻿type="a"는 소문자 a, b, c, d 순서로 자동 매김이 설정됩니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol type="a"&#62;<br>
@@ -90,6 +94,7 @@
       </fieldset>
 
       <h3><li>&#60;ol type="I"&#62;</li></h3>
+      <p>﻿type="I"는 Ⅰ, Ⅱ, Ⅲ, Ⅳ 순서로 자동 매김이 설정됩니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol type="I"&#62;<br>
@@ -110,6 +115,7 @@
       </fieldset>
 
       <h3><li>&#60;ol type="i"&#62;</li></h3>
+      <p>﻿type="i"는 ⅰ, ⅱ, ⅲ, ⅳ 순서로 자동 매김이 설정됩니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol type="i"&#62;<br>
@@ -130,6 +136,7 @@
       </fieldset>
 
       <h3><li>&#60;ol reversed&#62;</li></h3>
+      <p>﻿&#60;ol reversed&#62;는 기존의 &#60;ol&#62;태그에서 1,2,3,4 출력되던 것들의 순서를 4,3,2,1 순서대로 만드는 속성입니다. reversed라는 단어의 의미처럼 순서를 반대로 하고 싶을 때 사용합니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ol reversed&#62;<br>
@@ -151,8 +158,10 @@
     </ul>
 
     <h2><li>&#60;ul&#62;tag 다양한 목록 출력하기</li></h2>
+    <p>﻿순서 없이 목록에 ●, ■ 같은 기호로 목차를 표시하는 &#60;ul&#62;tag</p>
     <ul>
       <h3><li>&#60;ul type="square"&#62;</li></h3>
+      <p>﻿type="square"는 목차를 사각형 (■) 모양의 기호로 출력할 때 사용합니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ul type="square"&#62;<br>
@@ -173,6 +182,7 @@
       </fieldset>
 
       <h3><li>&#60;ul type="circle"&#62;</li></h3>
+      <p>﻿type="circle"은 목차를 속이 빈 원형(○) 모양의 기호로 출력할 때 사용합니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ul type="circle"&#62;<br>
@@ -193,6 +203,7 @@
       </fieldset>
 
       <h3><li>&#60;ul type="disc"&#62;</li></h3>
+      <p>﻿type="disc"는 목차를 속이 채워진 원형(●) 모양의 기호로 출력할 때 사용합니다.</p>
       <fieldset>
         <legend>코드</legend>
             <div class="c1">&#60;ul type="disc"&#62;<br>
