--- a/CSS/color.html
+++ b/CSS/color.html
@@ -41,7 +41,7 @@
   <body>
     <div class="title">For Beginner</div>
     <ol>
-    <h1><li>텍스트 컬러 변경하기 </li></h1>
+    <h1><li>﻿color 속성 변경하기 </li></h1>
 ﻿     <p class="setumei">전체적인 텍스트의 색을 변경하려면 &#60;body&#62;태그에 color 속성을 넣고, 제목이면 &#60;h1&#62;~&#60;h6&#62;태그, 문단이면 &#60;p&#62;태그 등 자신이 원하는 선택자를 설정한 후 속성과 값을 적용해준다.</p>
     <img src="1.png">
     <p>﻿위의 a 선택자에 대한 css 문법은 아래처럼 서술할 수 있다.</p>
@@ -67,7 +67,7 @@
           <div class="c1">&#60;/body&#62;</div><br>
         &#60;/html&#62;<br>
     </fieldset>
-    <h1><li>텍스트 컬러 출력하기</li></h1>
+    <h1><li>color 속성 출력하기</li></h1>
     <ul type="square">
       <h2><li>전체 텍스트 색 바꾸기</li></h2>
       <p>전체 텍스트 색을 바꾸기 위해서는 body태그에 css의 color 속성을 이용하여 텍스트 색을 변경하면 된다. W3schools는 color 속성을 적용할 시, background-color 속성도 함께 적용해야 한다고 명시하고 있다.</p>
@@ -84,7 +84,8 @@
       color:#ffffff;
       background-color:navy;
 }
-    </fieldset>
+</fieldset><br>
+    *#ffffff는 하얀색이다.
     <h2><li>특정 태그의 텍스트 색 바꾸기</li></h2>
     <p>만약 문단 텍스트의 색을 변경하고 싶다면, &#60;p&#62;태그에 CSS color 속성을 이용하여 텍스트 색을 변경하면 된다.</p>
     <fieldset>
@@ -95,7 +96,7 @@
       <legend>출력화면</legend>
       p{color:#ffffff;}
     </fieldset>
-
+    <p>*#ffffff는 하얀색이다.</p>
 
   </ul>
     </ol>
