--- a/HTML/font.html
+++ b/HTML/font.html
@@ -23,7 +23,7 @@
   <body>
     <div class="title">For Beginner</div>
     <ol>
-      <h1><li>다양한 폰트</li></h1>
+      <h1><li>다양한 폰트 효과</li></h1>
         <ol type="A">
           <h2><li>&#60;b&#62;<b>진하게</b></li></h2>
           <p>&#60;b&#62;태그는 bold, 진하게를 의미한다.</p>
@@ -40,7 +40,7 @@
           <h2><li>&#60;del&#62;<del>취소선</del></li></h2>
           <p>&#60;del&#62;태그는 deleted part, 취소한 부분, 취소선을 의미한다.</p>
         </ol>
-      <h1><li>다양한 폰트 출력하기</li></h1>
+      <h1><li>다양한 폰트  출력하기</li></h1>
       <ol type="A">
         <h2><li>&#60;b&#62;진하게</li></h2>
           <fieldset>
