--- a/HTML/font.html
+++ b/HTML/font.html
@@ -32,9 +32,9 @@
           <h2><li>&#60;i&#62;<i>이탤릭체-기울기</i></li></h2>
           <p>&#60;i&#62;태그는 italics, 이탤릭체. 오른쪽으로 기울어진 글자체를 의미한다.</p>
           <h2><li>&#60;small&#62;<small>작은 글자</small></li></h2>
-          <p>&#60;small&#62;태그는 small, 작은 글씨를 의미한다.</p>
+          <p>&#60;small&#62;태그는 small, 작은 글씨를 의미한다. 태그를 겹쳐서 여러 번 쓰면 더욱 작아진다. 하지만 CSS에선 값으로 크기 조절이 가능하므로 꼭 필요한 부분에만 사용하도록 하자.</p>
           <h2><li>&#60;big&#62;<big>큰 글자</big></li></h2>
-          <p>&#60;big&#62;태그는 big, 큰 글씨를 의미한다.</p>
+          <p>&#60;big&#62;태그는 big, 큰 글씨를 의미한다. ﻿ 큰 글씨를 의미한다. 태그를 겹쳐서 여러 번 쓰면 더욱 커진다. 하지만 CSS에선 값으로 크기 조절이 가능하므로 꼭 필요한 부분에만 사용하도록 하자.</p>
           <h2><li>&#60;u&#62;<u>밑줄</u></li></h2>
           <p>&#60;u&#62;태그는 underline, 밑줄을 의미한다.</p>
           <h2><li>&#60;del&#62;<del>취소선</del></li></h2>
