--- a/HTML/atag.html
+++ b/HTML/atag.html
@@ -13,7 +13,7 @@
     font-weight:800;
     font-size:50px;
   }
-  h1{
+  h2{
     border-style:solid;
     border-width:0 0 5px 0;
     border-color:blue;
@@ -31,8 +31,9 @@
 <body>
 <div class="title">For Beginner</div>
   <a name="top"></a>
-  <ol
-  <h1>하이퍼링크 연결형식</h1>
+  <ul>
+    <h1><li>&#60;a&#62;태그를 삽입할 수 있는 4가지 방법</li></h1>
+  </ul>  
   <ol>
     <h2><li>a태그로 외부 사이트 링크 삽입하기</li></h2>
       ﻿a태그는 하이퍼링크를 삽입하는 태그이다. anchor(닻)의 첫 글자를 딴 a를 사용한다. 배가 정박할 때 사용하는 닻을 의미. 정보의 바다에 정박한다는 시적인 의미를 지니고 있다. -유튜브 생활코딩
