--- a/HTML/cssbox.html
+++ b/HTML/cssbox.html
@@ -69,7 +69,7 @@
       <h2><li>block level element</li></h2>
       <p>block level element (블록 레벨 엘리먼트). 화면 전체 테두리를 쓰는 태그들을 말한다. 대표적인 태그는 &#60;h1&#62;~&#60;h6&#62;, &#60;ol&#62;, &#60;ul&#62;, &#60;li&#62;, &#60;p&#62; 등의 태그들이 있다.</p>
       <p>예시)</p>
-      <p>&#60;p&#62;태그는 Content와 상,하 Margin요소를 가지고 있는 block element 태그이다.</p>
+      <p>&#60;p&#62;태그는 Content와 상,하 Margin요소를 가지고 있는 block level element 태그이다.</p>
       <img src="K-026.jpg" alt="block level element" width="600px">
       <h2><li>inline element</li></h2>
       <p>inline element (인라인 엘리먼트). 자기 contents 만큼의 테두리를 쓰는 태그들을 말한다. 대표적인 태그는 &#60;img&#62;, &#60;a&#62;, &#60;span&#62;, &#60;b&#62;, &#60;big&#62; 등의 태그들이 있다.</p>
