--- a/CSS/classid.html
+++ b/CSS/classid.html
@@ -40,6 +40,8 @@
           }
         .ya {  width: 400px;   height: 300px;}
         .ju {   border: 30px solid orange;   }
+        #ya {  width: 400px;   height: 300px;}
+        #ju {   border: 30px solid orange;   }
     </style>
   </head>
   <body>
@@ -92,9 +94,9 @@
       <fieldset>
         <legend>출력 화면</legend>
           <body>
-            <img src="beach1.png" id="ya">
-            <img src="beach2.png" id="ju">
-            <img src="beach3.png" id="ya ju">
+            <img src="beach1.png" class="ya">
+            <img src="beach2.png" class="ju">
+            <img src="beach3.png" class="ya ju">
           </body>
       </fieldset>
       </ol>
@@ -147,9 +149,9 @@
       <fieldset>
         <legend>출력 화면</legend>
           <body>
-            <img src="beach1.png" class="ya">
-            <img src="beach2.png" class="ju">
-            <img src="beach3.png" class="ya ju">
+            <img src="beach1.png" id="ya">
+            <img src="beach2.png" id="ju">
+            <img src="beach3.png" id="ya ju">
           </body>
       </fieldset> <br><br>
 
