--- a/CSS/textalign.html
+++ b/CSS/textalign.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>&#60;form&#62;tag</title>
+    <title>text-align속성</title>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <style>
     body{
