--- a/CSS/textalign.html
+++ b/CSS/textalign.html
@@ -131,7 +131,7 @@
           <legend>출력 화면</legend>
             <p class="pcenter">text-align은 문단 정렬 속성</p>
         </fieldset><br>
-      <h4><li>﻿가운데 정렬 : text-align: justify;﻿</li></h4>
+      <h4><li>양쪽 정렬 : text-align: justify;﻿</li></h4>
         <fieldset>
           <legend>코드</legend>
           <div class="c1">&#60;style&#62;</div>
