--- a/CSS/liststyle1.html
+++ b/CSS/liststyle1.html
@@ -50,63 +50,105 @@
   <h1><li>list-style-type출력하기</li></h1>
 </ol>
   <ul type="square">
-  <h2><li>&#60;ol&#62;tag list-style-type출력하기</li></h2>
+  <h2><li>&#60;ul&#62;tag list-style-type출력하기</li></h2>
 
   <ol>
   <h3><li>list-style-type: circle</li></h3>
+  <ol>
+    <li>﻿&#60;body&#62;tag 안에 들어갈 list를 먼저 입력한다. class="li0"을 생성한다. 여러개의 list를 만들 것이기 때문에 class로 묶어주고 수식해준다.</li>
+<Br>
   <fieldset>
-    <legend>코드</legend>
-    <p class="c1">&#60;ol class="li0"&#62;</p>
+    <legend>HTML 코드</legend>
+    <p class="c1">&#60;ul class="li0"&#62;</p>
       <p class="c2">&#60;li>list-style-type: circle&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: circle&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: circle&#60;/li&#62;</p>
-    <p class="c1">&#60;/ol&#62;</p>
-  </fieldset>
+    <p class="c1">&#60;/ul&#62;</p>
+  </fieldset><br>
+
+  <li>&#60;head&#62;태그 안에 &#60;style&#62;태그를 열고 .li0을 수식하는 명령어들을 넣어준다.</li><br>
+    <fieldset>
+      <legend>CSS 코드</legend>
+      <p class="c1">&#60;head&#62;</p>
+      <p class="c1">&#60;style&#62;</p>
+         <p class="c2">.li0{list-style-type: circle;}</p>
+      <p class="c1">&#60;/style&#62;</p>
+      <p class="c1">&#60;/head&#62;</p>
+    </fieldset><br>
+  <li>저장을 한 후 출력한다.</li> <br>
   <fieldset>
     <legend>출력 화면</legend>
-    <ol class="li0">
+    <ul class="li0">
       <li>list-style-type: circle</li>
       <li>list-style-type: circle</li>
       <li>list-style-type: circle</li>
-    </ol>
-  </fieldset><br>
+    </ul>
+  </fieldset><br></ol>
 
   <h3><li>list-style-type:disc</li></h3>
+  <ol>
+    <li>&#60;body&#62;tag 안에 들어갈 list를 먼저 입력한다. class="li1"을 생성한다. 여러개의 list를 만들 것이기 때문에 class로 묶어주고 수식해준다.</li><br>
   <fieldset>
-    <legend>코드</legend>
-    <p class="c1">&#60;ol class="li1"&#62;</p>
+    <legend>HTML 코드</legend>
+    <p class="c1">&#60;ul class="li1"&#62;</p>
       <p class="c2">&#60;li>list-style-type: disc&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: disc&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: disc&#60;/li&#62;</p>
-    <p class="c1">&#60;/ol&#62;</p>
-  </fieldset>
+    <p class="c1">&#60;/ul&#62;</p>
+  </fieldset><br>
+
+  <li>&#60;head&#62;태그 안에 &#60;style&#62;태그를 열고 .li1을 수식하는 명령어들을 넣어준다.</li><br>
+    <fieldset>
+      <legend>CSS 코드</legend>
+      <p class="c1">&#60;head&#62;</p>
+      <p class="c1">&#60;style&#62;</p>
+         <p class="c2">.li1{list-style-type:disc;}</p>
+      <p class="c1">&#60;/style&#62;</p>
+      <p class="c1">&#60;/head&#62;</p>
+    </fieldset><br>
+
+  <li>저장을 한 후 출력한다.</li> <br>
   <fieldset>
     <legend>출력 화면</legend>
-    <ol class="li1">
+    <ul class="li1">
       <li>list-style-type:disc</li>
       <li>list-style-type:disc</li>
       <li>list-style-type:disc</li>
-    </ol>
+    </ul>
   </fieldset><br>
+</ol>
 
   <h3><li>list-style-type:square</li></h3>
+  <ol>
+  <li>&#60;body&#62;tag 안에 들어갈 list를 먼저 입력한다. class="li2"을 생성한다. 여러개의 list를 만들 것이기 때문에 class로 묶어주고 수식해준다.</li><br>
   <fieldset>
-    <legend>코드</legend>
-    <p class="c1">&#60;ol class="li2"&#62;</p>
+    <legend>HTML 코드</legend>
+    <p class="c1">&#60;ul class="li2"&#62;</p>
       <p class="c2">&#60;li>list-style-type: square&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: square&#60;/li&#62;</p>
       <p class="c2">&#60;li>list-style-type: square&#60;/li&#62;</p>
-    <p class="c1">&#60;/ol&#62;</p>
-  </fieldset>
-  <fieldset>
-    <legend>출력 화면</legend>
-    <ol class="li2">
-      <li>list-style-type:square</li>
-      <li>list-style-type:square</li>
-      <li>list-style-type:square</li>
-    </ol>
+    <p class="c1">&#60;/ul&#62;</p>
   </fieldset><br>
 
+  <li>&#60;head&#62;태그 안에 &#60;style&#62;태그를 열고 .li2을 수식하는 명령어들을 넣어준다.</li><br>
+    <fieldset>
+      <legend>CSS 코드</legend>
+      <p class="c1">&#60;head&#62;</p>
+      <p class="c1">&#60;style&#62;</p>
+         <p class="c2">.li2{list-style-type:square;}</p>
+      <p class="c1">&#60;/style&#62;</p>
+      <p class="c1">&#60;/head&#62;</p>
+    </fieldset><br>
+  <li>저장을 한 후 출력한다.</li> <br>
+  <fieldset>
+    <legend>출력 화면</legend>
+    <ul class="li2">
+      <li>list-style-type:square</li>
+      <li>list-style-type:square</li>
+      <li>list-style-type:square</li>
+    </ul>
+  </fieldset><br>
+</ol>
 </ol>
 </ul>
 </body>
